# MCP_Server

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  Class_8.txt  DEVELOPMENT.md  EXAMPLES.md  GIT_WORKTREE_WORKFLOW.md  HW_8.txt  README.md  pyproject.toml
src/invoice_mcp_server/: __init__.py  __main__.py
src/invoice_mcp_server/api/: health_endpoint.py
src/invoice_mcp_server/domain/: __init__.py  models.py
src/invoice_mcp_server/gui/: __init__.py  cli.py  web.py
src/invoice_mcp_server/infrastructure/: __init__.py  database.py  git_sync.py  lock_manager.py  repositories.py
src/invoice_mcp_server/mcp/: __init__.py  primitives.py  protocol.py  server.py
src/invoice_mcp_server/mcp/prompts/: __init__.py  prompts.py
src/invoice_mcp_server/mcp/resources/: __init__.py  dynamic_resources.py  static_resources.py  sync_resources.py
src/invoice_mcp_server/mcp/tools/: __init__.py  bulk_tools.py  customer_tools.py  export_tools.py  invoice_tools.py  sync_tools.py
src/invoice_mcp_server/sdk/: __init__.py  client.py  operations.py
src/invoice_mcp_server/security/: __init__.py  audit.py  auth.py  input_validator.py  rate_limiter.py
src/invoice_mcp_server/shared/: __init__.py  config.py  exceptions.py  logging.py
src/invoice_mcp_server/transport/: __init__.py  base.py  http.py  stdio.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_exceptions.py  test_lock_manager.py  test_mcp_protocol.py  test_mcp_server.py  test_models.py  test_repositories.py  test_sdk.py
